--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,5 +1,8 @@
 
-on: push
+on:
+  push:
+    braches:
+       - master
 
 jobs:
    build:
@@ -13,6 +16,7 @@ jobs:
           checking: false
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
+        if: github.ref == 'refs/heads/master'
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./public
